--- a/Visual Design/new_template/resources/styles.css
+++ b/Visual Design/new_template/resources/styles.css
@@ -6,7 +6,7 @@ body {
   margin: 0; padding: 0; 
   background: url(../images/caBIG_footer.gif) no-repeat bottom right #F4F4F5; 
   font-family: Arial, Helvetica, sans-serif; 
-  font-size: 13px; 
+  font-size: 10pt; 
   color: #000000; 
 }
 
@@ -14,7 +14,6 @@ h1, h2 {
   margin: 0 0 12px 0; 
   color: #2E3257; 
   font-weight: 600; 
-  font-size: 16px; 
 }
 
 h1 { font-size: 1.2em;}
@@ -50,7 +49,6 @@ h2 { font-size: 1.0em; }
   top: 22px; left: 131px; 
   background: url(../images/tabs1_L1.gif) no-repeat top left; 
   padding-left: 1px; 
-  width: 600px; 
   font-size: .85em; 
 }
 
@@ -181,7 +179,7 @@ h2 { font-size: 1.0em; }
 
 .boxHeader_R { background: url(../images/boxheader_BG_R.gif) no-repeat top right; }
 
-.boxHeader H2 { font-weight: 600; font-size: 13px; color: #FFFFFF; margin: 0; padding: 6px 20px 4px 8px;}
+.boxHeader h2 { color: #FFFFFF; margin: 0; padding: 6px 20px 4px 8px;}
 
 .box_T { background: url(../images/box_T.gif) repeat-x top; }
 
