--- a/Visual Design/new_template/resources/styles.css
+++ b/Visual Design/new_template/resources/styles.css
@@ -10,25 +10,30 @@ body {
   color: #000000; 
 }
 
-h1, h2 { 
-  margin: 0 0 12px 0; 
+h1, h2, h3, h4 { 
+  margin: 0; 
+  padding: 0;
   color: #2E3257; 
   font-weight: 600; 
 }
 
-h1 { font-size: 1.2em;}
+h1 { 
+  font-size: 1.2em; 
+  margin-bottom: 12px;
+}
 h2 { font-size: 1.0em; }
+h3, h4 { font-size: 0.9em; }
 
 #header { 
   background: url(../images/header_BG.gif) repeat-x top; 
   min-width: 770px; 
 }
 
-#header .background-anchor-R { 
+#header .background-R { 
   background: url(../images/header_BG_R.gif) no-repeat top right; 
 }
 
-#caAERSlogo { vertical-align: top; }
+#caAERS-logo { vertical-align: top; }
 
 #login-action { 
   position: absolute; top: 0; right: 0; 
@@ -113,7 +118,7 @@ h2 { font-size: 1.0em; }
   margin: 0; padding: 2px 0; 
   line-height: 14px; 
   border: 0 solid #000;
-  border-width: 0 1px 0 0; 
+  border-right-width: 1px; 
 }
 
 #workflow-tabs .tab.selected { 
@@ -123,6 +128,7 @@ h2 { font-size: 1.0em; }
 #workflow-tabs .tab div { 
   position: relative; 
   left: 6px; 
+  background-image: none;
   background: url(../images/tabs2_R.gif) no-repeat top right; 
   padding: 0 16px 0 10px;
 }
@@ -149,9 +155,9 @@ h2 { font-size: 1.0em; }
 
 #inner-tabs { 
   background: url(../images/tabs3_BG.gif) no-repeat top right; 
-  padding: 4px 12px 0 0; 
-  margin-left: 7px; 
-  height: 33px; 
+  padding: 4px 7px 0 0; 
+  margin: 0 0 0 7px; 
+  height: 24px; 
   font-size: .85em; 
 }
 
@@ -196,38 +202,58 @@ h2 { font-size: 1.0em; }
 
 .pane {
   background-color: #fff;
+  float: left;
+  margin: 0 14px 12px 0;
 }
 
-#summary-pane { float: left; width: 25%; margin: 0 14px 12px 0; vertical-align: top; }
+#summary-pane { 
+  width: 25%; 
+}
+#main-pane { 
+  width: 70%; 
+}
 
-#main-pane { float: left; margin: 0 14px 12px 0; width: 70%; }
+.box .header { 
+  background: url(../images/boxheader_BG.gif) repeat-x top #1972C7; 
+}
+.box .header h2 { 
+  color: #FFFFFF; 
+  margin: 0; 
+  padding: 6px 20px 4px 8px;
+}
+.box .header .background-L { background: url(../images/boxheader_BG_L.gif) no-repeat top left; }
+.box .header .background-R { background: url(../images/boxheader_BG_R.gif) no-repeat top right; }
 
-.boxHeader { background: url(../images/boxheader_BG.gif) repeat-x top #1972C7; }
 
-.boxHeader_L { background: url(../images/boxheader_BG_L.gif) no-repeat top left; }
+.border-T  { background: url(../images/box_T.gif)  repeat-x top; }
+.border-L  { background: url(../images/box_L.gif)  repeat-y left; }
+.border-R  { background: url(../images/box_R.gif)  repeat-y right; }
+.border-B  { background: url(../images/box_B.gif)  repeat-x bottom; }
+.border-TL { background: url(../images/box_TL.gif) no-repeat top left; }
+.border-TR { background: url(../images/box_TR.gif) no-repeat top right; }
+.border-BL { background: url(../images/box_BL.gif) no-repeat bottom left; }
+.border-BR { background: url(../images/box_BR.gif) no-repeat bottom right; }
 
-.boxHeader_R { background: url(../images/boxheader_BG_R.gif) no-repeat top right; }
+.box h3 { 
+  height: 24px;
+  margin: 0 7px;
+  font-weight: bold;
+}
 
-.boxHeader h2 { color: #FFFFFF; margin: 0; padding: 6px 20px 4px 8px;}
+.box .interior {
+  margin: 0 8px 0 7px;
+  padding: 8px 0;
+  min-height: 28px;
+}
 
-.box_T { background: url(../images/box_T.gif) repeat-x top; }
+.content { 
+  padding: 8px;
+}
 
-.box_L { background: url(../images/box_L.gif) repeat-y left; }
-
-.box_R { background: url(../images/box_R.gif) repeat-y right; }
-
-.box_B { background: url(../images/box_B.gif) repeat-x bottom; }
-
-.box_TL { background: url(../images/box_TL.gif) no-repeat top left; }
-
-.box_TR { background: url(../images/box_TR.gif) no-repeat top right; }
-
-.box_BL { background: url(../images/box_BL.gif) no-repeat bottom left; }
-
-.box_BR { background: url(../images/box_BR.gif) no-repeat bottom right; }
-
-.boxTabs { height: 28px; margin: 0 8px 0 7px; }
-
-.boxContent { padding: 8px 24px 24px 24px; }
+.interior h4 {
+  border-top: solid 1px #000; 
+  background-color: #D7E7ED;
+  padding: 4px 8px;
+}
 
 #footer { height: 65px; }
