Replace main pane dummy content with a dummy form
SVN-Revision: 1470

--- a/Visual Design/new_template/resources/ie.css
+++ b/Visual Design/new_template/resources/ie.css
@@ -3,3 +3,6 @@ body {
      for the browser font setting to work on IE6. */
   font-size: 80%; 
 }
+
+/* Force hasLayout */
+* html div.row, * html .autoclear { height: 1% }
