Add delete checkboxes
SVN-Revision: 1476

--- a/Visual Design/new_template/resources/styles.css
+++ b/Visual Design/new_template/resources/styles.css
@@ -19,12 +19,16 @@ h1, h2, h3, h4 {
 
 h1 { 
   font-size: 1.2em; 
-  margin-bottom: 12px;
+  margin-bottom: 1em;
 }
 h2 { font-size: 1.0em; }
 h3, h4 { font-size: 0.9em; }
 
 p { margin: 0 0 1em 0; }
+input, label, select, textarea { 
+  vertical-align: middle; 
+  margin: 0; padding: 0; 
+}
 
 /**** TEMPLATE ELEMENTS */
 
@@ -259,6 +263,7 @@ p { margin: 0 0 1em 0; }
 }
 
 .interior h4 {
+  position: relative;
   border-top: solid 1px #000; 
   background-color: #D7E7ED;
   padding: 4px 8px;
@@ -319,4 +324,11 @@ div.row div.label {
 div.row div.value { 
   font-weight: normal; 
   margin-left: 11em; /* default; should be changed whenever .label width is changed */
+}
+
+.delete-control {
+  position: absolute;
+  top: 0;
+  right: 4px;
+  margin: 3px 4px 0 0;
 }
