Remove caAERS from element IDs; align header img alts with image content
SVN-Revision: 1477

--- a/Visual Design/new_template/resources/styles.css
+++ b/Visual Design/new_template/resources/styles.css
@@ -41,7 +41,7 @@ input, label, select, textarea {
   background: url(../images/header_BG_R.gif) no-repeat top right; 
 }
 
-#caAERS-logo { vertical-align: top; }
+#logo { vertical-align: top; }
 
 #login-action { 
   position: absolute; top: 0; right: 0; 
