--- a/Visual Design/new_template/resources/styles.css
+++ b/Visual Design/new_template/resources/styles.css
@@ -332,3 +332,41 @@ div.row div.value {
   right: 4px;
   margin: 3px 4px 0 0;
 }
+
+.buttons {
+  border-top: 1px solid #000;
+}
+
+.buttons a {
+  color: #eee;
+  background-color: #3876C1;
+  text-decoration: none;
+  padding: 3px;
+  margin: 3px;
+  border: 1px solid #ddd;
+  display: block;
+  float: left;
+}
+
+.buttons a:hover {
+  color: #333;
+  background-color: #5C94D5;
+}
+
+.local-buttons {
+  font-size: 0.9em;
+  float: right;
+  clear: both;
+}
+
+.flow-buttons {
+  clear: both;
+  margin-top: 8px;
+}
+
+.flow-buttons .prev {
+  float: left;
+}
+.flow-buttons .next {
+  float: right;
+}
