Form field styles
SVN-Revision: 1479

--- a/Visual Design/new_template/resources/styles.css
+++ b/Visual Design/new_template/resources/styles.css
@@ -29,6 +29,15 @@ input, label, select, textarea {
   vertical-align: middle; 
   margin: 0; padding: 0; 
 }
+input[type=text], input[type=password], select, textarea {
+  background-color: #f4f4f5;
+  border: 1px inset #ccc;
+  padding: 2px;
+}
+input[disabled] {
+  border-color: #ddc;
+  background-color: #ddc;
+}
 
 /**** TEMPLATE ELEMENTS */
 
@@ -278,15 +287,15 @@ input, label, select, textarea {
 }
 
 .error input {
-  border: 2px solid #c00;
+  border-color: #c03;
 }
 .error .label {
-  color: #c00;
+  color: #c03;
 }
 
 ul.errors {
-  margin: 0; padding: 0.5em 1em;
-  color: #c00;
+  margin: 0; padding: 0 1em 0.2em 1em;
+  color: #c03;
 }
 ul.errors li {
   margin: 0 0.8em; padding: 0;
@@ -299,8 +308,8 @@ ul.errors li {
     should also set the width of div.label.
  */
 div.row {
-    padding: 3px 2px 2px 2px;
-    margin-top: 1px;
+    padding: 2px;
+    margin: 1px 0;
 }
 /* Automatically clear after each row
    Based on http://www.positioniseverything.net/easyclearing.html */
